tree-sitter-bagfile/corpus/comments.txt
=====>>
Full line comments
=====>>

---
---

% this is a comment
"xr" |
% this is also a comment

----->>

(file (tune
  (header)
  (body
    (comment)
    (line
      (measure
        (string) (barline)))
    (comment))))



=====>>
Trailing comments
=====>>

---
---

"xr" | % "xb"
"xr" |

----->>

(file (tune
  (header)
  (body
    (line
      (measure
        (string) (barline))
      (tail_comment))
    (line
      (measure
        (string) (barline))))))
