tree-sitter-bagfile/corpus/fields.txt
=====>>
Inline field
=====>>

---
---

"xr" (meter: 6/8) "xc" |

----->>

(file (tune
  (header)
  (body (line
    (measure
      (string)
      (inline_field
        (field label: (field_content) value: (field_content)))
      (string)
      (barline))))))


=====>>
Field without label
=====>>

---
---

"xr" (triplet) "xc" |

----->>

(file (tune
  (header)
  (body (line
    (measure
      (string)
      (inline_field
        (field value: (field_content)))
      (string)
      (barline))))))




=====>>
Field labels and values with spaces
=====>>

---
some label: long value
---

"xr" (labelless value) "xc" (space label: value words) |

----->>

(file (tune
  (header
    (field label: (field_content) value: (field_content)))
  (body (line
    (measure
      (string)
      (inline_field (field value: (field_content)))
      (string)
      (inline_field (field label: (field_content) value: (field_content)))
      (barline))))))
