tree-sitter-bagfile/corpus/header.txt
=====>>
Basic header
=====>>

---
title: tune name
---

----->>

(file (tune
  (header
    (field
      label: (field_element)
      value: (field_element)))))


=====>>
Multiple fields
=====>>

---
title: tune name
style: 2/4 March
tags: foo, bar, baz
---

----->>

(file (tune
  (header
    (field label: (field_element) value: (field_element))
    (field label: (field_element) value: (field_element))
    (field label: (field_element) value: (field_element)))))
