tree-sitter-bagfile/corpus/strings.txt
=====>>
Strings parse as strings
=====>>

---
---

"first string" | "second string" |

----->>

(file (tune
  (header)
  (body
    (measure
      (string) (barline))
    (measure
      (string) (barline)))))
